add api gateway, add zipkin and sleuth configuration for all microservices

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>eureka-server</module>
         <module>feign-client</module>
         <module>notification</module>
+        <module>api-gateway</module>
     </modules>
 
     <properties>
