--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,3 +26,9 @@ services:
     ports:
       - 7799:80
     restart: unless-stopped
+
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+    - 9411:9411
