--- a/fraud/src/main/resources/application.properties
+++ b/fraud/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.format_sql=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+
+spring.zipkin.base-url=http://localhost:9411/
