--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>feign-client</module>
         <module>notification</module>
         <module>api-gateway</module>
+        <module>amqp</module>
     </modules>
 
     <properties>
