--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -16,3 +16,9 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
 spring.zipkin.base-url=http://localhost:9411/
+
+rabbitmq.exchanges.internal=internal.exchange
+rabbitmq.queue.notification=notification.queue
+rabbitmq.routing-keys.internal-notification=internal.notification.routing-key
+
+spring.rabbitmq.addresses=localhost:5672
